<resources>
    <string name="app_name">ToDoChat</string>
    <string name="login_guest">ゲストでログイン</string>
    <string name="username">%$1%</string>
    <string name="e_mail">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="signup">登録</string>
    <string name="login">ログイン</string>
    <string name="testLogout">ログアウト</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_setting">設定(準備中)</string>

    <!-- BottomNavigationBar -->
    <string name="title_home">ホーム</string>
    <string name="title_talk">トーク</string>
    <string name="title_todo">Todoリスト</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_pass">password</string>
    <string name="hint_mail">e-mail</string>
    <string name="title_activity_drawer_main">DrawerMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">設定</string>

    <string name="menu_home">ホーム</string>

    <string name="home_action">ホーム</string>
    <string name="mylistactivity">MyToDoList</string>


    <string name="drawer_title_home">ホーム</string>
    <string name="drawer_menu_list">自分のTodoリスト</string>
    <string name="drawer_title_setting">設定(準備中)</string>
    <string name="menu_share">シェア(準備中)</string>
    <string name="menu_send">送る(準備中)</string>
    <string name="drawer_menu_talk">トーク(準備中)</string>
    <string name="task_name">タスク名</string>
    <string name="drawer_title_newpost">新規ToDo</string>
    <string name="add_checkbox">追加</string>
    <string name="finish_newpost">投稿</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_login_intent">アカウントをお持ちの方はこちら</string>
    <string name="login_signup_intent">新規登録の方はこちら</string>
    <string name="action_signout">ログアウト</string>
    <string name="title_activity_char_log">CharLogActivity</string>
    <string name="send_button_talk">送信</string>
    <string name="message_hint">Enter Message....</string>
</resources>
