<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".MainActivity">

    <Button
            android:text="@string/signup"
            android:background="@drawable/curve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/SignUpButton" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="73dp" android:textColor="#626962"/>
    <Button
            android:text="@string/login"
            android:hint=""
            android:background="@drawable/curve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LoginButton" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="73dp" android:textColorHint="#32439B" android:textColor="#626962"/>
    <EditText
            android:background="@drawable/curve_form"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:autofillHints=""
            android:contentDescription="@string/e_mail"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/passEditText"
            app:layout_constraintEnd_toEndOf="@+id/passEditText"
            app:layout_constraintStart_toStartOf="@+id/passEditText" android:hint="@string/hint_mail"
            app:layout_constraintHorizontal_bias="1.0"/>
    <EditText
            android:background="@drawable/curve_form"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passEditText"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/password"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/hint_pass" app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"
            android:layout_marginTop="32dp" app:layout_constraintVertical_bias="0.90999997"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_begin="505dp"/>
</android.support.constraint.ConstraintLayout>